[package]
name = "serde-zero-copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1.0"
features = ["raw_value"]

[dependencies.yoke-derive]
version = "0.7"

[dependencies.yoke]
version = "0.7"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json_nostr]
path = "../serde_json-1.0.100"

[dependencies.serde_bytes]
version = "0.11"

[dependencies.assert-json-diff]
version = "2.0"

[dev-dependencies.async-fs]
version = "1.6"